--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="bg-zinc-50 text-zinc-800 dark:bg-zinc-900 dark:text-zinc-400">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Scroll-driven Playground</title>
   </head>
   <body>
     <div id="root"></div>
