--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en" class="bg-zinc-50 text-zinc-700 dark:bg-zinc-900 dark:text-zinc-400">
+<html
+  lang="en"
+  class="overflow-x-hidden bg-zinc-50 text-zinc-700 dark:bg-zinc-900 dark:text-zinc-400"
+>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
