--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scroll-driven Playground</title>
+    <title>Scroll-driven showcase</title>
   </head>
   <body>
     <div id="root"></div>
